cmake_minimum_required(VERSION 3.17)
project(Master_DataStruct)

set(CMAKE_CXX_STANDARD 14)

add_executable(Master_DataStruct SeqList.cpp DList.cpp List_Homework.cpp Queue_LinkList.cpp Queue_List.cpp StackApplication_bracketCheck.cpp StackApplication_BackCaculate.cpp BiTree.cpp BiTree_Traversal.cpp BinarySearchTree.cpp)